--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -16,9 +16,9 @@ const navItems = [
     href="/"
     class="flex justify-center md:justify-start items-center space-x-4"
   >
-    <img src="/scf-logo.svg" alt="logo" class="w-16 h-16 block" />
+    <img src="/samaya-logo.svg" alt="logo" class="w-16 h-16 block" />
     <h1 class="text-2xl md:text-3xl font-bold text-brand-primary font-serif">
-      Silver Coast Fitness
+      Samaya Cullerton Acupuncture
     </h1>
   </a>
   <!-- Navigation Links -->
