--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ import Nav from "../components/Nav.astro";
   <body class="bg-white">
     <div class="flex flex-col min-h-screen">
       <!-- Main Content -->
-      <main class="flex-grow p-4 max-w-7xl mx-auto w-full bg-amber-300">
+      <main class="flex-grow p-4 max-w-7xl mx-auto w-full bg-white">
         <Nav />
         <h2></h2>
         <slot />
