--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,5 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Welcome to Astro!">
-  <div class="text-3xl">Boo! Hey there!</div>
+  <div class="text-3xl py-6">Headline Here</div>
 </Layout>
