--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import "../styles/global.css";
 const { title } = Astro.props;
 import Footer from "../components/Footer.astro";
 import Nav from "../components/Nav.astro";
+import "@fontsource/kaushan-script";
 ---
 
 <!doctype html>
