--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -17,7 +17,9 @@ const navItems = [
     class="flex justify-center md:justify-start items-center space-x-4"
   >
     <img src="/samaya-logo.svg" alt="logo" class="w-16 h-16 block" />
-    <h1 class="text-2xl md:text-3xl font-bold text-brand-primary font-serif">
+    <h1
+      class="text-2xl md:text-3xl font-bold text-brand-primary font-serif text-fuchsia-800"
+    >
       Samaya Cullerton Acupuncture
     </h1>
   </a>
@@ -32,7 +34,7 @@ const navItems = [
           class={`pb-1 pt-4 md:pt-0 ${
             currentPage === name.toLowerCase()
               ? "font-bold text-text-dark border-b-2 border-text-dark"
-              : "hover:text-rose-500"
+              : "hover:text-fuchsia-500"
           }`}
         >
           {name}
