--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,4 +4,59 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Welcome to Astro!">
   <div class="text-3xl py-6">Headline Here</div>
+
+  <!-- Add a button to trigger Cal.com scheduler -->
+  <button
+    class="bg-brand-primary text-text-light px-6 py-2 rounded-lg shadow-lg cursor-pointer hover:bg-brand-dark transition"
+    data-cal-link="mattosurf/1-hour-session"
+    data-cal-namespace="1-hour-session"
+    data-cal-config='{"layout":"month_view","theme":"light"}'
+  >
+    Schedule a Session
+  </button>
+
+  <!-- Cal element-click embed code -->
+  <script type="text/javascript">
+    (function (C, A, L) {
+      let p = function (a, ar) {
+        a.q.push(ar);
+      };
+      let d = C.document;
+      C.Cal =
+        C.Cal ||
+        function () {
+          let cal = C.Cal;
+          let ar = arguments;
+          if (!cal.loaded) {
+            cal.ns = {};
+            cal.q = cal.q || [];
+            d.head.appendChild(d.createElement("script")).src = A;
+            cal.loaded = true;
+          }
+          if (ar[0] === L) {
+            const api = function () {
+              p(api, arguments);
+            };
+            const namespace = ar[1];
+            api.q = api.q || [];
+            if (typeof namespace === "string") {
+              cal.ns[namespace] = cal.ns[namespace] || api;
+              p(cal.ns[namespace], ar);
+              p(cal, ["initNamespace", namespace]);
+            } else p(cal, ar);
+            return;
+          }
+          p(cal, ar);
+        };
+    })(window, "https://app.cal.com/embed/embed.js", "init");
+
+    Cal("init", "1-hour-session", { origin: "https://cal.com" });
+
+    Cal.ns["1-hour-session"]("ui", {
+      theme: "light",
+      cssVarsPerTheme: { light: { "cal-brand": "#86198F" } },
+      hideEventTypeDetails: false,
+      layout: "month_view",
+    });
+  </script>
 </Layout>
