--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -57,10 +57,11 @@ import Layout from "../layouts/Layout.astro";
     </div>
 
     <!-- Submit Button -->
-    <div class="text-center mt-6">
+    <div class="text-center md:text-left mt-6">
       <button
         type="submit"
-        class="bg-brand-secondary text-text-light font-bold py-2 px-6 rounded-full hover:bg-rose-500 focus:ring-2 focus:ring-blue-600 focus:outline-none md:w-64 w-full"
+        class="bg-brand-primary text-text-light text-lg font-semibold py-3 px-8 rounded-full hover:bg-brand-dark focus:ring-2 focus:ring-fuchsia-600 focus:outline-none md:w-64 w-full transition
+        hover:bg-brand-dark cursor-pointer"
       >
         Send
       </button>
