--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -16,10 +16,9 @@ const navItems = [
     href="/"
     class="flex justify-center md:justify-start items-center space-x-4"
   >
-    <img src="/samaya-logo.svg" alt="logo" class="w-16 h-16 block" />
-    <h1
-      class="text-2xl md:text-3xl font-bold text-brand-primary font-serif text-fuchsia-800"
-    >
+    <img src="/logo2.svg" alt="logo" class="w-16 h-16 text-brand-primary" />
+
+    <h1 class="text-2xl md:text-3xl font-bold text-brand-accent">
       Samaya Cullerton Acupuncture
     </h1>
   </a>
