--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,8 @@ const { title } = Astro.props;
 import Footer from "../components/Footer.astro";
 import Nav from "../components/Nav.astro";
 import "@fontsource/kaushan-script";
+import "@fontsource/poppins";
+import "@fontsource/poppins/300.css";
 ---
 
 <!doctype html>
