--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Button from "../components/Button.astro";
 ---
 
 <Layout title="Welcome to Astro!">
@@ -7,7 +8,7 @@ import Layout from "../layouts/Layout.astro";
 
   <!-- Add a button to trigger Cal.com scheduler -->
   <button
-    class="bg-brand-primary text-text-light px-6 py-2 rounded-lg shadow-lg cursor-pointer hover:bg-brand-dark transition"
+    class="bg-brand-accent text-text-light text-lg font-semibold px-6 py-2 rounded-xl shadow-lg cursor-pointer hover:bg-brand-dark transition"
     data-cal-link="mattosurf/1-hour-session"
     data-cal-namespace="1-hour-session"
     data-cal-config='{"layout":"month_view","theme":"light"}'
