--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -32,8 +32,8 @@ const navItems = [
           href={href}
           class={`pb-1 pt-4 md:pt-0 ${
             currentPage === name.toLowerCase()
-              ? "font-bold text-text-dark border-b-2 border-text-dark"
-              : "hover:text-fuchsia-600"
+              ? "font-bold text-text-dark border-b-2"
+              : "hover:text-[#cc926a]"
           }`}
         >
           {name}
