--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,8 @@ import Button from "../components/Button.astro";
 
   <!-- Add a button to trigger Cal.com scheduler -->
   <button
-    class="bg-brand-accent text-text-light text-lg font-semibold px-6 py-2 rounded-xl shadow-lg cursor-pointer hover:bg-brand-dark transition"
+    class="bg-brand-accent text-text-light text-lg px-6 py-2 rounded-xl shadow-lg cursor-pointer hover:bg-brand-dark transition
+    focus:ring-2 focus:ring-[#cc926a] focus:outline-none md:w-64 w-full"
     data-cal-link="mattosurf/1-hour-session"
     data-cal-namespace="1-hour-session"
     data-cal-config='{"layout":"month_view","theme":"light"}'
