--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,4 @@
-<footer
-  class="bg-gradient-to-r from-rose-950 to-violet-900 text-white text-sm py-6 mt-12"
->
+<footer class="bg-brand-primary text-text-light text-sm py-6 mt-12">
   <div class="container mx-auto text-center space-y-4">
     <!-- Navigation Links -->
     <!-- <nav class="space-x-6 text-lg">
