--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,10 +17,10 @@ import "@fontsource/poppins/300.css";
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="bg-white">
+  <body class="bg-stone-50">
     <div class="flex flex-col min-h-screen">
       <!-- Main Content -->
-      <main class="flex-grow p-4 max-w-7xl mx-auto w-full bg-white">
+      <main class="flex-grow p-4 max-w-7xl mx-auto w-full">
         <Nav />
         <h2></h2>
         <slot />
