--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -30,7 +30,7 @@
 
     <!-- Copyright -->
     <p>
-      &copy; <span id="year">{new Date().getFullYear()}</span> Samaya Cullerton Acupuncture.
+      &copy; <span id="year">{new Date().getFullYear()}</span> Wellness Medical Center
     </p>
   </div>
 </footer>
