--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,13 +3,18 @@ import Layout from "../layouts/Layout.astro";
 import Button from "../components/Button.astro";
 ---
 
-<Layout title="Welcome to Astro!">
-  <div class="text-3xl py-6">Headline Here</div>
+<Layout title="Wellness Medical Center">
+  <!-- <div class="text-2xl py-6">
+    Samaya Cullerton, LAc, MTCM Traditional Family Medicine
+  </div> -->
 
   <!-- Add a button to trigger Cal.com scheduler -->
+
+  <div class="rounded-xl opacity-50 bg-brand-accent p-4 my-6 h-128 w-96"></div>
+
   <button
-    class="bg-brand-accent text-text-light text-lg px-6 py-2 rounded-xl shadow-lg cursor-pointer hover:bg-brand-dark transition
-    focus:ring-2 focus:ring-[#cc926a] focus:outline-none md:w-64 w-full"
+    class="bg-brand-accent text-text-light font-semibold text-lg px-6 py-2 rounded-xl shadow-lg cursor-pointer hover:bg-brand-dark transition
+  focus:ring-2 focus:ring-[#cc926a] focus:outline-none md:w-64 w-full"
     data-cal-link="mattosurf/1-hour-session"
     data-cal-namespace="1-hour-session"
     data-cal-config='{"layout":"month_view","theme":"light"}'
