--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,23 @@
 @import "tailwindcss";
 
 h1 {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 100;}
+    font-family: 'Mulish Variable', sans-serif;
+    font-weight: 300;}
+
+h2 {
+    font-family: 'Mulish Variable', sans-serif;
+    font-weight: 300;
+    color: #cc926a;
+}
+
+nav {
+    font-family: 'Mulish Variable', sans-serif;
+    font-weight: 300;
+}    
 
 body {
+font-family: 'Mulish Variable', sans-serif;
+font-weight: 300;
 color: var(--text-dark);  
 }
 
@@ -14,11 +27,16 @@ color: var(--text-dark);
     --brand-accent: #cc926a;
     --text-light: #f5f5f4;
     --text-medium: #78716c;
-    --text-dark: #44403c; 
+    --text-dark: #44403c;
+    --brand-light: #c6d0bf;
   }
 
   .bg-brand-primary {
     background-color: var(--brand-primary);
+}
+
+.bg-brand-light {
+    background-color: var(--brand-light);
 }
 
 .bg-brand-dark {
