--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -56,6 +56,16 @@ import Button from "../components/Button.astro";
         Central California Alliance for Health Insurance provider network,
         currently accepting new patients.
       </p>
+
+      <button
+        class="bg-brand-accent text-text-light font-semibold text-lg px-6 py-3 my-4 rounded-xl shadow-lg cursor-pointer hover:bg-brand-dark transition
+  focus:ring-2 focus:ring-[#cc926a] focus:outline-none md:w-64 w-full"
+        data-cal-link="mattosurf/1-hour-session"
+        data-cal-namespace="1-hour-session"
+        data-cal-config='{"layout":"month_view","theme":"light"}'
+      >
+        Schedule a Session
+      </button>
     </section>
 
     <section class="md:col-span-1">
