--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -13,7 +13,7 @@ import Layout from "../layouts/Layout.astro";
         Don’t fill this out if you’re human: <input name="bot-field" />
       </label>
     </p>
-    <h3 class="text-2xl font-bold text-text-dark mb-2 pt-0">Contact us</h3>
+    <h3 class="text-2xl font-bold text-brand-accent mb-2 pt-0">Contact Us</h3>
     <p class="mb-6">
       Feel free to reach out with any questions about scheduling or our
       services!
@@ -65,8 +65,8 @@ import Layout from "../layouts/Layout.astro";
     <div class="text-center md:text-left mt-6">
       <button
         type="submit"
-        class="bg-brand-accent text-text-light text-lg px-6 py-2 rounded-xl shadow-lg cursor-pointer hover:bg-brand-dark transition
-    md:w-64 w-full focus:ring-2 focus:ring-[#cc926a] focus:outline-none"
+        class="bg-brand-accent text-text-light text-lg px-6 py-3 rounded-xl shadow-lg cursor-pointer hover:bg-brand-dark transition
+    md:w-64 w-full focus:ring-2 focus:ring-[#cc926a] font-semibold focus:outline-none"
       >
         Send
       </button>
