--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -18,7 +18,7 @@ const navItems = [
     class="flex justify-center md:justify-start items-center space-x-4"
   >
     <img src="/logo2.svg" alt="logo" class="w-14 h-14 text-brand-primary" />
-    <h1 class="text-2xl md:text-2xl font-light text-brand-accent">
+    <h1 class="text-2xl md:text-2xl font-semibold text-brand-accent">
       Wellness Medical Center
     </h1>
   </a>
