--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -13,7 +13,9 @@ import Layout from "../layouts/Layout.astro";
         Don’t fill this out if you’re human: <input name="bot-field" />
       </label>
     </p>
-    <h3 class="text-2xl font-bold text-brand-accent mb-2 pt-0">Contact Us</h3>
+    <h3 class="text-2xl font-semibold text-brand-accent mb-2 pt-0">
+      Contact Us
+    </h3>
     <p class="mb-6">
       Feel free to reach out with any questions about scheduling or our
       services!
