--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,6 @@
 <footer class="bg-brand-primary text-text-light text-sm py-6 mt-12">
   <div class="container mx-auto text-center space-y-4">
-    <!-- Navigation Links -->
-    <!-- <nav class="space-x-6 text-lg">
+    <nav class="space-x-6 text-lg">
       <a
         href="/"
         class="hover:bg-brand-secondaryDark hover:text-white px-3 py-1 rounded transition text-right"
@@ -26,9 +25,8 @@
       >
         Contact</a
       >
-    </nav> -->
+    </nav>
 
-    <!-- Copyright -->
     <p>
       &copy; <span id="year">{new Date().getFullYear()}</span> Wellness Medical Center
     </p>
