--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -18,14 +18,14 @@ const navItems = [
     class="flex justify-center md:justify-start items-center space-x-4"
   >
     <img src="/logo2.svg" alt="logo" class="w-14 h-14 text-brand-primary" />
-    <h1 class="text-2xl md:text-2xl font-semibold text-brand-accent">
+    <h1 class="text-xl sm:text-2xl font-semibold text-brand-accent">
       Wellness Medical Center
     </h1>
   </a>
 
   <!-- Navigation Links -->
   <div
-    class="flex justify-center md:justify-end space-x-6 md:space-x-12 text-lg md:text-xl px-4 md:px-0 text-brand-secondary"
+    class="flex justify-center md:justify-end space-x-6 md:space-x-12 sm:text-lg md:text-xl px-4 md:px-0 text-brand-secondary"
   >
     {
       navItems.map(({ name, href }) => {
