--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Button from "../components/Button.astro";
+import Image from "astro/components/Image.astro";
+import waterfall from "../assets/waterfall.jpg";
 ---
 
 <Layout title="Wellness Medical Center">
@@ -10,7 +12,14 @@ import Button from "../components/Button.astro";
 
   <!-- Add a button to trigger Cal.com scheduler -->
 
-  <div class="rounded-xl opacity-50 bg-brand-accent p-4 my-6 h-128 w-96"></div>
+  <Image
+    src={waterfall}
+    alt="Waterfall"
+    class="rounded-3xl w-full mb-4 md:my-8"
+  />
+
+  <!-- <div class="rounded-xl opacity-50 bg-brand-accent p-4 my-6 h-128 w-full">
+  </div> -->
 
   <button
     class="bg-brand-accent text-text-light font-semibold text-lg px-6 py-2 rounded-xl shadow-lg cursor-pointer hover:bg-brand-dark transition
