--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,5 +50,49 @@ const currentPage = Astro.url.pathname; // This gives the current route (e.g., "
     </div>
 
     <script src="/src/scripts/fslightbox.js"></script>
+    <!-- Cal element-click embed code -->
+    <script type="text/javascript">
+      (function (C, A, L) {
+        let p = function (a, ar) {
+          a.q.push(ar);
+        };
+        let d = C.document;
+        C.Cal =
+          C.Cal ||
+          function () {
+            let cal = C.Cal;
+            let ar = arguments;
+            if (!cal.loaded) {
+              cal.ns = {};
+              cal.q = cal.q || [];
+              d.head.appendChild(d.createElement("script")).src = A;
+              cal.loaded = true;
+            }
+            if (ar[0] === L) {
+              const api = function () {
+                p(api, arguments);
+              };
+              const namespace = ar[1];
+              api.q = api.q || [];
+              if (typeof namespace === "string") {
+                cal.ns[namespace] = cal.ns[namespace] || api;
+                p(cal.ns[namespace], ar);
+                p(cal, ["initNamespace", namespace]);
+              } else p(cal, ar);
+              return;
+            }
+            p(cal, ar);
+          };
+      })(window, "https://app.cal.com/embed/embed.js", "init");
+
+      Cal("init", "1-hour-session", { origin: "https://cal.com" });
+
+      Cal.ns["1-hour-session"]("ui", {
+        theme: "light",
+        cssVarsPerTheme: { light: { "cal-brand": "#86198F" } },
+        hideEventTypeDetails: false,
+        layout: "month_view",
+      });
+    </script>
   </body>
 </html>
