--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -67,8 +67,7 @@ import Layout from "../layouts/Layout.astro";
     <div class="text-center md:text-left mt-6">
       <button
         type="submit"
-        class="bg-brand-accent text-text-light text-lg px-6 py-2 rounded-xl shadow-lg cursor-pointer hover:bg-brand-dark transition
-    md:w-64 w-full focus:ring-2 focus:ring-[#cc926a] font-semibold focus:outline-none"
+        class="bg-brand-accent text-text-light font-semibold text-lg px-6 py-3 rounded-xl shadow-lg cursor-pointer hover:bg-brand-dark transition focus:ring-2 focus:ring-[#cc926a] focus:outline-none md:w-64 w-full mb-4 md:mb-0"
       >
         Send
       </button>
