--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,6 +25,13 @@ const currentPage = Astro.url.pathname; // This gives the current route (e.g., "
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <script type="text/javascript">
+      setInterval(() =>
+      {
+          var els = Array.from(document.querySelctorAll("nav > div > a));
+          consolel.log(els);
+      }, 5);
+    </script>
   </head>
   <body class="bg-stone-50 relative">
     <!-- Background Gradient (Full Width, 400px Height, Fades to Transparent at Bottom) -->
