--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,7 +28,7 @@ const currentPage = Astro.url.pathname; // This gives the current route (e.g., "
     <script type="text/javascript">
       setInterval(() =>
       {
-          var els = Array.from(document.querySelctorAll("nav > div > a));
+          var els = Array.from(document.querySelctorAll("nav > div > a"));
           consolel.log(els);
       }, 5);
     </script>
