--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,8 +30,25 @@ const currentPage = Astro.url.pathname; // This gives the current route (e.g., "
       {
         border-bottom: 2px solid var(--brand-accent);
         color: var(--brand-accent);
+        font-weight: 800;
       }
     </style>
+    <script type="text/javascript">
+    // RJN
+    const links = document.querySelectorAll("nav > div > a");
+    if(links !== null)
+    {
+      Array.from(links).forEach((link) =>
+      {
+        link.classList.remove("active_link");
+        const link_href = link.getAttribute("href").toString().toLowerCase();
+        const paths = window.location.href.split("/");
+        const path = paths[paths.length - 1].trim().toLowerCase();
+        console.log(link_href);
+        console.log("Path: " + path)
+      });      
+    }
+  </script>
   </head>
   <body class="bg-stone-50 relative">
     <!-- Background Gradient (Full Width, 400px Height, Fades to Transparent at Bottom) -->
