--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,7 +35,7 @@ const currentPage = Astro.url.pathname; // This gives the current route (e.g., "
     </style>
     <script type="text/javascript">
     // RJN
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', (() =>
       const links = document.querySelectorAll("nav > div > a");
       if(links !== null)
       {
@@ -48,7 +48,7 @@ const currentPage = Astro.url.pathname; // This gives the current route (e.g., "
           console.log(link_href);
           console.log("Path: " + path)
         });
-    });      
+    }));      
   </script>
   </head>
   <body class="bg-stone-50 relative">
