--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -62,6 +62,7 @@ const currentPage = Astro.url.pathname; // This gives the current route (e.g., "
           {
             
             console.log("PATH NAME: " + window.location.pathname);
+            console.log("PATH" + path);
             if(window.location.pathname !== "/")
             {
 
