--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -120,4 +120,11 @@ import Layout from "../layouts/Layout.astro";
       </button>
     </div>
   </form>
+  <a href="/privacy/">
+    <p
+      class="text-brand-accent hover:text-brand-primary text-center mt-4 underline"
+    >
+      Our Privacy Policy
+    </p>
+  </a>
 </Layout>
