--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -89,13 +89,13 @@ import Layout from "../layouts/Layout.astro";
         id="email_opt_in"
         class="w-6 h-6 text-brand-accent border-gray-300 rounded focus:ring-[#cc926a] cursor-pointer"
       />
-      <label for="email_opt_in" class="text-text-dark">
-        I agree to receive email updates and promotional offers.
+      <label for="email_opt_in" class="text-text-dark"
+        >Sign me up for exclusive updates, insights, and special offers!
       </label>
     </div>
 
     <!-- Opt-in for SMS Marketing -->
-    <div class="grid grid-cols-[auto_1fr] gap-3 items-start mt-4">
+    <!-- <div class="grid grid-cols-[auto_1fr] gap-3 items-start mt-4">
       <input
         type="checkbox"
         name="sms_opt_in"
@@ -108,7 +108,7 @@ import Layout from "../layouts/Layout.astro";
         Message and data rates may apply. Reply STOP to unsubscribe. Terms &
         Privacy Policy apply.
       </label>
-    </div>
+    </div> -->
 
     <!-- Submit Button -->
     <div class="text-center md:text-left mt-6">
