--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,17 +8,17 @@
         Home</a
       >
       <a
-        href="/about"
+        href="/services"
         class="hover:bg-brand-secondaryDark hover:text-white px-3 py-1 rounded transition"
       >
-        About</a
+        Services</a
       >
-      <a
+      <!-- <a
         href="/gallery"
         class="hover:bg-brand-secondaryDark hover:text-white px-3 py-1 rounded transition"
       >
         Gallery</a
-      >
+      > -->
       <a
         href="/contact"
         class="hover:bg-brand-secondaryDark hover:text-white px-3 py-1 rounded transition"
