--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -3,8 +3,8 @@ const { currentPage } = Astro.props;
 
 const navItems = [
   { name: "Home", href: "/" },
-  { name: "About Us", href: "/about/" },
-  { name: "Gallery", href: "/gallery/" },
+  // { name: "About", href: "/about/" },
+  { name: "Services", href: "/services/" },
   { name: "Contact", href: "/contact/" },
 ];
 ---
@@ -19,7 +19,7 @@ const navItems = [
   >
     <img src="/logo2.svg" alt="logo" class="w-14 h-14 text-brand-primary" />
     <h1 class="text-xl sm:text-2xl font-semibold text-brand-accent">
-      Wellness Medical Center
+      Samaya Cullerton Acupuncture
     </h1>
   </a>
 
