--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,32 +2,151 @@
 import Layout from "../layouts/Layout.astro";
 import Button from "../components/Button.astro";
 import Image from "astro/components/Image.astro";
-import waterfall from "../assets/waterfall.jpg";
+import lake from "../assets/lake.jpg";
 ---
 
-<Layout title="Wellness Medical Center">
-  <!-- <div class="text-2xl py-6">
-    Samaya Cullerton, LAc, MTCM Traditional Family Medicine
-  </div> -->
+<Layout title="Samaya Cullerton">
+  <div class="relative w-full">
+    <Image
+      src={lake}
+      alt="Lake Scene"
+      class="rounded-3xl w-full mb-4 md:my-8"
+    />
+  </div>
 
-  <!-- Add a button to trigger Cal.com scheduler -->
+  <div class="max-w-7xl mx-auto text-lg md:mt-4 mt-2 md:mb-3 text-center">
+    <div class="text-text-dark sm:py-4 md:max-w-3x">
+      <h2 class="text-2xl sm:text-3xl md:text-4xl font-semibold py-1">
+        Samaya Cullerton
+      </h2>
+      <p class="sm:text-lg md:text-xl mb-3 font-semibold">
+        LAc, MTCM Traditional Family Medicine
+      </p>
+    </div>
+  </div>
 
-  <Image
-    src={waterfall}
-    alt="Waterfall"
-    class="rounded-3xl w-full mb-4 md:my-8"
-  />
-
-  <!-- <div class="rounded-xl opacity-50 bg-brand-accent p-4 my-6 h-128 w-full">
-  </div> -->
-
-  <button
-    class="bg-brand-accent text-text-light font-semibold text-lg px-6 py-2 rounded-xl shadow-lg cursor-pointer hover:bg-brand-dark transition
-  focus:ring-2 focus:ring-[#cc926a] focus:outline-none md:w-64 w-full"
-    data-cal-link="mattosurf/1-hour-session"
-    data-cal-namespace="1-hour-session"
-    data-cal-config='{"layout":"month_view","theme":"light"}'
+  <div
+    class="max-w-7xl mx-auto pb-6 md:mt-6 grid grid-col-1 lg:grid-cols-12 gap-6 md:text-left"
   >
-    Schedule a Session
-  </button>
+    <div class="lg:col-span-4 grid">
+      <div
+        class="w-48 h-48 sm:w-72 sm:h-72 bg-brand-accent opacity-50 rounded-full justify-self-center"
+      >
+      </div>
+    </div>
+
+    <div class="lg:col-span-8">
+      <p class="mb-4 text-lg md:text-xl">
+        Welcome to my practice. As a licensed acupuncturist and herbalist, I am
+        dedicated to providing compassionate, patient-centered care through
+        Traditional Chinese Medicine. Whether you are seeking acupuncture,
+        herbal treatments, or a holistic approach to wellness, my goal is to
+        support your health with personalized, evidence-based care. In addition
+        to my private practice, I am also part of <a
+          href="https://www.google.com/"
+          class="text-brand-primary underline hover:text-red-600 !important"
+          >Wellness Medical Center</a
+        > in Santa Cruz, CA, a respected, women-owned clinic serving the local community
+        for over 40 years.
+      </p>
+      <p class="mb-4 text-lg md:text-xl">
+        I am a California board-licensed acupuncturist and herbalist with a
+        Master's Degree in Traditional Chinese Medicine. With over a decade of
+        experience, I have specialized in women's health, prenatal, postpartum,
+        and pediatric traditional medicine.
+      </p>
+      <p class="mb-4 text-lg md:text-xl">
+        As a scholar of traditional medical practices for more than twenty
+        years, I teach herbal medicine, dietetics, and clinical acupuncture at
+        Five Branches University in Santa Cruz. Notably, I also co-own the
+        <a
+          href="https://www.google.com/"
+          class="text-brand-primary underline hover:text-[#cc926a]"
+        >
+          Wellness Medical Center</a
+        >, reinforcing my dedication to the Santa Cruz community.
+      </p>
+      <p class="mb-4 text-lg md:text-xl">
+        I provide compassionate, patient-centered care and am part of the
+        Central California Alliance for Health Insurance provider network. I am
+        currently accepting new patients.
+      </p>
+      <div class="mt-6 grid grid-cols-1 md:grid-cols-2 gap-4 items-center">
+        <button
+          class="bg-brand-accent text-text-light font-semibold text-lg px-6 py-3 rounded-xl shadow-lg cursor-pointer hover:bg-brand-dark transition focus:ring-2 focus:ring-[#cc926a] focus:outline-none width-full md:w-64"
+          data-cal-link="mattosurf/1-hour-session"
+          data-cal-namespace="1-hour-session"
+          data-cal-config='{"layout":"month_view","theme":"light"}'
+        >
+          Schedule a Session
+        </button>
+        <img
+          src="/AllianceLogo.svg"
+          alt="Central California Alliance for Health Insurance logo"
+          class="w-16 h-16 justify-self-center md:justify-self-end"
+        />
+      </div>
+    </div>
+  </div>
+  <div class="max-w-7xl mx-auto text-lg md:mt-4 mt-2 md:mb-3 text-center">
+    <div class="mx-auto text-text-dark sm:py-4 md:max-w-7xl">
+      <h2 class="text-2xl sm:text-3xl md:text-4xl font-semibold py-1 mb-12">
+        Trusted by Patients
+      </h2>
+
+      <!-- Centered Grid -->
+      <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-start mx-auto">
+        <div class="rounded-xl bg-[#e4e9e1] p-8 w-full">
+          <p class="text-left mb-6">
+            Samaya is a wonderful practitioner. I have been receiving treatments
+            from her for years, and I always am so thankful to have her in my
+            life! Her treatments provide effective relief for my aches and
+            pains, and support me through emotional ups and downs. She is a
+            gifted herbalist, and always knows just the right thing to help me.
+            She is consistently thorough in both understanding what I am hoping
+            for with the treatment, and in answering any questions I may have.
+            Her style of acupuncture is very gentle and restorative— I am so
+            appreciative of her care, and recommend her to everyone!
+          </p><p class="text-right font-bold mt-2">Molly D.</p>
+        </div>
+        <div class="rounded-xl bg-[#e4e9e1] p-8 w-full">
+          <p class="text-left mb-6">
+            I have been seeing Samaya for years, and I truly cannot recommend
+            her enough! She has been an absolute game changer in helping me
+            manage a variety of physical and mental health concerns, including
+            perimenopause symptoms, hormone imbalance, and anxiety. Her
+            expertise, care, and nurturing approach make every session an
+            incredibly healing experience.
+          </p>
+          <p class="text-left mb-6">
+            Samaya takes the time to truly listen and understand what’s going
+            on, and I never feel rushed during my appointments. Her bedside
+            manner is unmatched—she is compassionate, knowledgeable, and deeply
+            intuitive in her practice. Every time I leave a session, I feel
+            balanced, rejuvenated, and grateful for her care.
+          </p>
+          <p class="text-left mb-6">
+            I’ve referred many people to Samaya, and every single one has had an
+            equally positive experience. If you are looking for an acupuncturist
+            who is not only excellent at what she does but also genuinely cares
+            about your well-being, look no further. She is a gem!
+          </p>
+          <p class="text-right font-bold mt-2">S.G.</p>
+        </div>
+        <!-- <div class="rounded-xl bg-[#e4e9e1] p-8 w-full">
+          <p class="text-left mb-6">
+            Samaya is a wonderful practitioner. I have been receiving treatments
+            from her for years, and I always am so thankful to have her in my
+            life! Her treatments provide effective relief for my aches and
+            pains, and support me through emotional ups and downs. She is a
+            gifted herbalist, and always knows just the right thing to help me.
+            She is consistently thorough in both understanding what I am hoping
+            for with the treatment, and in answering any questions I may have.
+            Her style of acupuncture is very gentle and restorative— I am so
+            appreciative of her care, and recommend her to everyone!
+          </p><p class="text-right font-bold mt-2">Molly D.</p>
+        </div> -->
+      </div>
+    </div>
+  </div>
 </Layout>
