--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,14 +2,14 @@
 import Layout from "../layouts/Layout.astro";
 import Button from "../components/Button.astro";
 import Image from "astro/components/Image.astro";
-import lake from "../assets/lake.jpg";
+import davenport from "../assets/davenport.jpg";
 ---
 
 <Layout title="Samaya Cullerton">
   <div class="relative w-full">
     <Image
-      src={lake}
-      alt="Lake Scene"
+      src={davenport}
+      alt="up the coast from Santa Cruz"
       class="rounded-3xl w-full mb-4 md:my-8"
     />
   </div>
@@ -44,7 +44,7 @@ import lake from "../assets/lake.jpg";
         support your health with personalized, evidence-based care. In addition
         to my private practice, I am also part of <a
           href="https://www.google.com/"
-          class="text-brand-primary underline hover:text-red-600 !important"
+          class="text-orange-700 hover:text-orange-900"
           >Wellness Medical Center</a
         > in Santa Cruz, CA, a respected, women-owned clinic serving the local community
         for over 40 years.
@@ -61,7 +61,7 @@ import lake from "../assets/lake.jpg";
         Five Branches University in Santa Cruz. Notably, I also co-own the
         <a
           href="https://www.google.com/"
-          class="text-brand-primary underline hover:text-[#cc926a]"
+          class="text-orange-700 hover:text-orange-900"
         >
           Wellness Medical Center</a
         >, reinforcing my dedication to the Santa Cruz community.
